--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -2,3 +2,6 @@
 
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "nDefaults.scss";
+body{
+    background-color:  #4da6ff;
+}
