--- a/app/src/app/components/Home/home.template.html
+++ b/app/src/app/components/Home/home.template.html
@@ -1,2 +1,3 @@
 <div>
+  <bh-forecastdays></bh-forecastdays><bh-forecast></bh-forecast><bh-weatherdetails></bh-weatherdetails><bh-header></bh-header>
 </div>
