--- a/app/src/app/components/Home/home.template.html
+++ b/app/src/app/components/Home/home.template.html
@@ -1,3 +1,3 @@
 <div>
-  <bh-forecastdays></bh-forecastdays><bh-forecast></bh-forecast><bh-weatherdetails></bh-weatherdetails><bh-header></bh-header>
+  <bh-header></bh-header><bh-weatherdetails [placedata]="page.placedata"></bh-weatherdetails><bh-forecast [forecastdata]="page.forecastdata"></bh-forecast><bh-forecastdays [forecastdata]="page.forecastdata"></bh-forecastdays>
 </div>
