--- a/app/src/app/components/Home/header.template.html
+++ b/app/src/app/components/Home/header.template.html
@@ -1,5 +1,8 @@
 <div fxLayout="column wrap" fxLayoutAlign="start stretch" [fxShow]="true">
   <div>
+    <h1>
+      {{page.form.value.place}}
+    </h1>
   </div>
   <form [formGroup]="page.form">
     <div fxLayout="row wrap" fxLayoutAlign="start stretch" [fxShow]="true">
