--- a/app/src/app/components/Home/weatherdetails.template.html
+++ b/app/src/app/components/Home/weatherdetails.template.html
@@ -1,1 +1,18 @@
-<div id="angularRoot"></div>
+<div fxLayout="row wrap" style="overflow: hidden; border-radius: 1.2rem;height:300px;  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08); margin:10px;" fxLayoutAlign="start stretch" [fxShow]="true">
+  <div fxFlex.xs="100" fxFlex.sm="50" fxFlex="50" style="background: rgba(255, 255, 255, 0.2);backdrop-filter: blur(10px);padding: 20px;">
+    <div fxLayout="row wrap" fxFlex="100" fxLayoutAlign="start stretch" [fxShow]="true">
+      <div fxLayout="row wrap" fxFlex="50" fxLayoutAlign="start stretch" [fxShow]="true">
+        <h1 style="margin:0px;">
+          London</h1>
+        <h6 style="margin-top:0px;">
+          Monday 26 August</h6>
+      </div>
+      <div fxLayout="row wrap" fxFlex="50" fxLayoutAlign="start stretch" [fxShow]="true">
+        <h1>
+          21%</h1>
+      </div>
+    </div>
+  </div>
+  <div fxFlex.xs="100" fxFlex.sm="50" fxFlex="50" style="background: rgba(255, 255, 255, 0.3);backdrop-filter: blur(10px);padding: 20px;">
+    hi</div>
+</div>
