--- a/app/src/app/components/Home/weatherdetails.template.html
+++ b/app/src/app/components/Home/weatherdetails.template.html
@@ -1,18 +1,46 @@
 <div fxLayout="row wrap" style="overflow: hidden; border-radius: 1.2rem;height:300px;  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08); margin:10px;" fxLayoutAlign="start stretch" [fxShow]="true">
-  <div fxFlex.xs="100" fxFlex.sm="50" fxFlex="50" style="background: rgba(255, 255, 255, 0.2);backdrop-filter: blur(10px);padding: 20px;">
-    <div fxLayout="row wrap" fxFlex="100" fxLayoutAlign="start stretch" [fxShow]="true">
-      <div fxLayout="row wrap" fxFlex="50" fxLayoutAlign="start stretch" [fxShow]="true">
-        <h1 style="margin:0px;">
-          London</h1>
-        <h6 style="margin-top:0px;">
-          Monday 26 August</h6>
+  <div fxFlex.xs="100" fxFlex.sm="50" fxFlex="50" style="background: rgba(255, 255, 255, 0.2);backdrop-filter: blur(10px);padding: 20px;border:10px;">
+    <div style="position: absolute;top: 0;left: 0;padding:20px;">
+
+      London
+      <div>
+        Monday 14 Aug</div>
+    </div>
+    <div style="position: absolute;bottom: 0;right: 0; font-size:3.2rem;padding:20px;">
+      21 c<div style="font-size:1.2rem;">
+        Cloudy </div>
+    </div>
+  </div>
+  <div fxFlex.xs="100" fxFlex.sm="50" fxFlex="50" style="background: rgba(255, 255, 255, 0.3);backdrop-filter: blur(10px);display:flex;justify-content:center;align-item:center;padding-top:20px;">
+    <div fxLayout="column wrap" style="width:100%;height:100%;" fxLayoutAlign="none none" [fxShow]="true">
+      <div fxLayout="row wrap" style="height:50%;display:flex;justify-content:center;align-item:center;text-align: center;padding-top:10px;" fxLayoutAlign="start stretch" [fxShow]="true">
+        <div fxFlex="33">
+          <div>
+            72</div>High
+        </div>
+        <div fxFlex="33">
+          <div>
+            High</div>72
+        </div>
+        <div fxFlex="33">
+          <div>
+            High</div>72
+        </div>
       </div>
-      <div fxLayout="row wrap" fxFlex="50" fxLayoutAlign="start stretch" [fxShow]="true">
-        <h1>
-          21%</h1>
+      <div fxLayout="row wrap" style="height:50%;display:flex;justify-content:center;align-item:center;text-align: center;padding-top:10px;" fxLayoutAlign="start stretch" [fxShow]="true">
+        <div fxFlex="33">
+          <div>
+            High</div>72
+        </div>
+        <div fxFlex="33">
+          <div>
+            High</div>72
+        </div>
+        <div fxFlex="33">
+          <div>
+            High</div>72
+        </div>
       </div>
     </div>
   </div>
-  <div fxFlex.xs="100" fxFlex.sm="50" fxFlex="50" style="background: rgba(255, 255, 255, 0.3);backdrop-filter: blur(10px);padding: 20px;">
-    hi</div>
 </div>
