--- a/app/src/app/components/Home/header.template.html
+++ b/app/src/app/components/Home/header.template.html
@@ -4,12 +4,10 @@
   <div style="display:flex;justify-content:center;margin-top:10px;color:white">
     <form [formGroup]="page.form">
       <div fxLayout="row wrap" fxFlex="100" fxLayoutAlign="start stretch" [fxShow]="true">
-        <div fxLayout="column wrap" style="margin-right:5px;height:20px;background:blue;display:felx;align-item:center;" fxLayoutAlign="start stretch" [fxShow]="true">
-          <mat-form-field style=" border: none;border-radius:8px;width: 200px;font-size: 16px; background-color: rgba(0, 0, 255,&#xA0;0.2);" [appearance]="&apos;legacy&apos;" [floatLabel]="&apos;auto&apos;" [hideRequiredMarker]="false">
-            <input matInput placeholder="Input" [required]="false" formControlName="place">
+        <mat-form-field style="border-radius: 1.2rem;padding: 5px 10px ;margin-left:30px;margin-top:10px;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);" [appearance]="&apos;legacy&apos;" [floatLabel]="&apos;auto&apos;" [hideRequiredMarker]="false">
+          <input matInput placeholder="Input" [required]="false" formControlName="place">
 
-          </mat-form-field>
-        </div><button mat-button style="padding: 10px 20px;font-size: 8px;text-align: center;text-decoration: none;cursor: pointer;border-radius: 50%;background-color: #3498db; color: #fff; border: none;" (click)="placeSearch(page.form.value.place)">Search</button>
+        </mat-form-field><button mat-button style="border-radius:1.2rem;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);margin-left:15px;width:50px;height:80px;padding:5px 10px" (click)="placeSearch(page.form.value.place)">Search</button>
       </div>
     </form>
   </div>
